Updated with Formulae

--- a/SimpleMNISTDigitClassifier.ipynb
+++ b/SimpleMNISTDigitClassifier.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "5082578b",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm#used for showing progress bar during training"
    ]
   },
   {
@@ -314,7 +314,10 @@
    "id": "7cc2229e",
    "metadata": {},
    "source": [
-    "### ReLu (Rectified Linear Unit) Actitvation Function"
+    "### ReLu (Rectified Linear Unit) Actitvation Function\n",
+    "$\n",
+    "\\text{ReLU}(x) = \\max(0, x)\n",
+    "$\n"
    ]
   },
   {
@@ -333,13 +336,20 @@
    "id": "400cefc6",
    "metadata": {},
    "source": [
-    "### Derivative ReLu (Rectified Linear Unit) Activation Function"
+    "### Derivative ReLu (Rectified Linear Unit) Activation Function\n",
+    "$\n",
+    "\\text{ReLU}'(x) = \n",
+    "\\begin{cases} \n",
+    "0 & \\text{if } x < 0 \\\\ \n",
+    "1 & \\text{if } x > 0 \n",
+    "\\end{cases}\n",
+    "$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "23394220",
+   "execution_count": null,
+   "id": "167a8822",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +362,10 @@
    "id": "e31e649a",
    "metadata": {},
    "source": [
-    "### SoftMax Activation Function"
+    "### SoftMax Activation Function\n",
+    "$\n",
+    "\\text{softmax}(\\mathbf{z})_i = \\frac{e^{z_i}}{\\sum_{j=1}^{K} e^{z_j}} \\quad\n",
+    "$\n"
    ]
   },
   {
@@ -395,7 +408,18 @@
    "id": "34ec8f96",
    "metadata": {},
    "source": [
-    "### One-Hot Encoding"
+    "### One-Hot Encoding\n",
+    "$\n",
+    "\\text{one\\_hot}(i, K) = \n",
+    "\\begin{bmatrix}\n",
+    "0 \\\\\n",
+    "0 \\\\\n",
+    "\\vdots \\\\\n",
+    "1 \\\\\n",
+    "\\vdots \\\\\n",
+    "0\n",
+    "\\end{bmatrix} \\quad \\text{where } 1 \\text{ is the index } i \\text{ and } K \\text{ is total number of classes}\n",
+    "$\n"
    ]
   },
   {
